[start #162629097] initial commit for index page to update stories

--- a/UI/index.html
+++ b/UI/index.html
@@ -91,7 +91,7 @@
         <div class="full-span bg-primary p-15 text-center">
             <div class="mega-text fadeIn">Post your question</div>
             <p class="fadeIn">
-                Provide all the details required to ask a question
+                Provide all the details required for you to ask a question
             </p>
         </div>
       
