--- a/UI/index.html
+++ b/UI/index.html
@@ -15,7 +15,7 @@
                     <ul class="nav text-center">
                         <li>
                             <a href="#">
-                                <img class="hatch logo" src="logo.png" alt="logo">
+                                <img class="hatch logo" src="./images/logo.png" alt="logo">
                             </a>
                         </li>
                     </ul>
