[feature #162629097] added QA image

--- a/UI/index.html
+++ b/UI/index.html
@@ -47,6 +47,7 @@
         <div class="container">
             <div class="wrapper">
                 <div class="col-6 mt-100 hatch">
+					<img class="resize" src="./images/1.png" alt="logo">
                     <h1 class="title">Stranded? Ask and you will be answered!</h1>
                     <p>
                          A broblem shared is a problem half solved. Get the problem fully solved by sharing it on stackoverflow 
@@ -64,7 +65,7 @@
                 </div>
 
                 <div class="col-4 pull-right">
-                    <h4 class="text-primary header-title">Join our community</h4>                    
+                    <h4 class="text-primary header-title">Join us today</h4>                    
                     <form class="form-container" action="questions.html">
                         <div class="form-group">
                             <input class="stretchRight input-control" type='text' placeholder="USERNAME">
