[feature #162629097]added more futures on the landing page

--- a/UI/index.html
+++ b/UI/index.html
@@ -54,7 +54,7 @@
                     </p>
                     <div class="pull-left pr-15">
                         <button class="btn btn-primary bg-orange p-15">
-                            Expore
+                            Expore Q & A
                         </button>
                     </div>
                     <div class="pull-left pl-15">
