[finish #162629097]updated the landing page

--- a/UI/index.html
+++ b/UI/index.html
@@ -65,7 +65,7 @@
                 </div>
 
                 <div class="col-4 pull-right">
-                    <h4 class="text-primary header-title">Join us today</h4>                    
+                    <h4 class="text-primary header-title">Join us today and contribute</h4>                    
                     <form class="form-container" action="questions.html">
                         <div class="form-group">
                             <input class="stretchRight input-control" type='text' placeholder="USERNAME">
